fix(dark-theme): fixes color contrast by making ground color darker

--- a/src/vars.css
+++ b/src/vars.css
@@ -40,7 +40,7 @@
   --e-color-balance-more: #adb5bd;
   --e-color-figure: #f8f9fa;
   --e-color-figure-less: #f1f3f5;
-  --e-color-ground: #343a40;
-  --e-color-ground-more: #212529;
+  --e-color-ground: #212529;
+  --e-color-ground-more: #000000;
   --e-color-negative: #fa5252;
 }
